#ADD_SUBDIRECTORY(01_assign)
#ADD_SUBDIRECTORY(02_assign)
#ADD_SUBDIRECTORY(03_assign)
#ADD_SUBDIRECTORY(04_assign)
ADD_SUBDIRECTORY(05_assign)
#ADD_SUBDIRECTORY(06_assign)
#ADD_SUBDIRECTORY(07_assign)
#ADD_SUBDIRECTORY(08_assign)
#ADD_SUBDIRECTORY(09_assign)
#ADD_SUBDIRECTORY(10_assign)
#ADD_SUBDIRECTORY(11_assign)
#ADD_SUBDIRECTORY(12_assign)
#ADD_SUBDIRECTORY(13_assign)